Search placeholder style made global. Improved scrollbar. Renamed filterOverlay to filters. Added username filter. Improved message rendering (line-height fix). Improved mention visibility, and overflow behaviour. Moved profile pic style to component away from the message component. Added props to view page [unsued atm]. Added missing message id to messages.

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,8 @@ input:focus-visible {
 }
 
 input::placeholder {
-  color: var(--clr-text-placeholder)
+  color: var(--clr-text-placeholder);
+  font-size: .875rem;
 }
 
 .renderIfVisible {
@@ -65,7 +66,7 @@ input::placeholder {
 }
 
 ::-webkit-scrollbar {
-  width: .875rem;
+  width: .5rem;
 }
 
 ::-webkit-scrollbar-track {
@@ -73,10 +74,11 @@ input::placeholder {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--clr-element);
+  background: var(--clr-element-light);
   border-radius: 1rem;
+  height: 3rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--clr-element-light);
+  background: var(--clr-text);
 }
