--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -1,4 +1,5 @@
-.filterOverlay {
+.filters {
+    animation: 300ms forwards slideInFade ease;
     background-color: var(--clr-element-glass);
     -webkit-backdrop-filter: blur(60px);
     backdrop-filter: blur(60px);
@@ -11,4 +12,16 @@
     position: absolute;
     top: 10.75rem;
     width: 16.25rem;
+}
+
+@keyframes slideInFade {
+    0% {
+        margin-top: -2rem;
+        opacity: .5;
+    }
+
+    100% {
+        margin-top: unset;
+        opacity: 1;
+    }
 }
