--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -19,10 +19,6 @@
         width: 100%;
     }
 
-    .search input::placeholder {
-        font-size: .875rem;
-    }
-
     .search input+svg {
         bottom: 1rem;
         color: var(--clr-text-placeholder);
@@ -49,6 +45,11 @@
         position: absolute;
         right: -1rem;
         top: 50%;
+        transition: background-color 150ms ease;
+    }
+
+    .collapse:hover {
+        background-color: var(--clr-element-light);
     }
 }
 
